--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "batch2:continuous": "playwright test tests/api-batch2-continuous.spec.js --timeout=3700000",
     "batch3:continuous": "playwright test tests/api-batch3-continuous.spec.js --timeout=3700000",
     "batch4:continuous": "playwright test tests/api-batch4-continuous.spec.js --timeout=3700000",
-    "batch:continuous:all": "playwright test tests/api-batch*-continuous.spec.js --timeout=3700000 && node generate-consolidated-report.js",
+    "batch:continuous:all": "playwright test tests/api-batch4-continuous.spec.js tests/api-batch5-continuous.spec.js tests/api-batch6-continuous.spec.js --timeout=3700000 && node generate-consolidated-report.js",
     "api:block": "playwright test tests/api-block-number.spec.js",
     "api:60min": "playwright test tests/api-continuous-60min.spec.js --timeout=3700000",
     "api:automation": "playwright test tests/api-automation.spec.js",
@@ -24,7 +24,9 @@
     "generate:consolidated": "node generate-consolidated-report.js",
     "test:consolidated": "node test-consolidated-report.js",
     "install:browsers": "playwright install",
-    "show-report": "playwright show-report"
+    "show-report": "playwright show-report",
+    "web": "node web-server.js",
+    "start": "node web-server.js"
   },
   "keywords": [
     "playwright",
@@ -39,7 +41,10 @@
     "@playwright/test": "^1.45.0"
   },
   "dependencies": {
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": ">=18.0.0"
