--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "batch2:continuous": "playwright test tests/api-batch2-continuous.spec.js --timeout=3700000",
     "batch3:continuous": "playwright test tests/api-batch3-continuous.spec.js --timeout=3700000",
     "batch4:continuous": "playwright test tests/api-batch4-continuous.spec.js --timeout=3700000",
-    "batch:continuous:all": "playwright test tests/api-batch4-continuous.spec.js tests/api-batch5-continuous.spec.js tests/api-batch6-continuous.spec.js --timeout=3700000 && node generate-consolidated-report.js",
+    "batch:continuous:all": "playwright test tests/api-batch1-continuous.spec.js tests/api-batch2-continuous.spec.js tests/api-batch3-continuous.spec.js tests/api-batch4-continuous.spec.js tests/api-batch5-continuous.spec.js tests/api-batch6-continuous.spec.js --timeout=3700000 && node generate-consolidated-report.js",
     "api:block": "playwright test tests/api-block-number.spec.js",
     "api:60min": "playwright test tests/api-continuous-60min.spec.js --timeout=3700000",
     "api:automation": "playwright test tests/api-automation.spec.js",
